dashboard.css
*{
    
    box-sizing: border-box;
}
html{
    scroll-behavior: smooth;
}
body{
    background-color: rgba(0, 0, 0, 0.84);
    margin:0;
    padding:0;
    font-family: cursive;
}
.container{
    display:grid;
    grid-template-columns: 20% 80%;
   
}
.menu{
    grid-area: 1 /1/ span 1/span 2;
    /* border-bottom: 1px dashed white; */
    height: 70px;
    box-shadow: 0 8px 10px 0 rgba(0, 0, 0, 0.2);
   position: fixed;
   width: 100%;
  border-bottom:1px dashed black;
   /* background-color: rgba(0, 0, 0, 0.24) ; */
   background-color: rgba(0, 0, 0, 0.04);
}
.side{
grid-area: 2/ 1/ span 1/span 1;
border-right: 9px solid rgba(37, 225, 237, 1) ;
background-color: rgba(0, 0, 0, 0.44);
box-shadow: 0 8px 10px 0 rgba(0, 0, 0, 0.2);
position: fixed;
height: 100%;
top:70px;

}
.main{
    grid-area: 2 /2 /span 1/span 1; 
    margin-top: 80px; 
    overflow-y: none;
    
}
.boxes{
    display: flex;
   
}
.box1,.box2,.box3{
   width: 20vw;
   margin: 20px;
   height: 150px;
   border-radius: 4px;
   box-shadow: 0 8px 10px 0 rgba(0, 0, 0, 0.2);
}
.box1{
    background-color: rgba(216, 93, 189, 1);
    text-align: center;
}
.box2{
    background-color: rgba(255, 138, 0, 1);
    text-align: center;
}
.box3{
    background-color:rgba(208, 209, 208, 0.66);
    text-align: center;
    
}
.circle{
    background-color: white;
    color: black;
    border-radius: 50%;
    height: 60px;
    width: 60px;
    margin: 20px auto;
    text-align: center;
    padding: 7px;
    
}
.circle label{
    font-weight: bold;
    font-size: 30px;
    font-family: cursive;
}
.container-label{
    color: black;
    font-size: 20px;
    font-family: cursive;
    margin-left: 10px;
    font-weight: bold;

}
.message{
    margin: 20px;
    color: white;
    font-size: 24px;
    
}
.main-body{
    display: flex;
    flex-direction: column;
    row-gap: 6px;
    
}
.main-body >div{
    background-color: black;
    height:auto;
    margin: 10px;
    padding-bottom: 20px;
    color: white;
    border-radius: 7px;
    width: 90%;
   
}
table{
    width: 100%;
    font-size: 20px;
}
th{
    border-bottom:3px solid rgba(255, 138, 0, 1);
    padding-bottom: 7px;
}
td{
    width: 50%;
    text-align: center;
    padding-top: 30px;
}
/* styling side panel */
.profile{
    height: 100px;
    width:100px;
    border-radius: 50%;
}
img{
    height: 9vw;
    width:5vw;
}
.dash-img{
    margin: 10px 40px;
    color: white;
}
.side-menu{
    display: flex;
    flex-direction: column;
    row-gap: 20px;
    color: white;
    font-size: 20px;
    
    /* margin: 10px 40px; */
}
.side-menu i{
    margin-bottom: 40px; 
    
}
.side-menu i label{
  font-family:'Arial Narrow';
}
.menu label{
    color: white;
}
.home{
    padding: 18px;
}
a{
   text-decoration: none;
   font-size: 24px;
   color:white;
}
.main-content{
    display: block;
}
.main-content nav{
    height: 45px;
    border-bottom: 1px dashed rgba(37, 225, 237, 1);
}
.main-content nav a{
   font-size: 14px;
   padding-left: 30px;
   line-height: 3;
}
#message{
    display: none;
    height: 400px;
}
#reply{
    display: none;
    height: 300px;
}
textarea{
    width: 100%;
    padding: 20px;
    border: 2px solid rgba(255, 138, 0, 1);
    font-family: cursive;
    height: 100%;
    border-radius: 4px;
    box-sizing: border-box;
    background-color: rgba(0, 0, 0, 0.84);
    resize: vertical;
    color: white;
}
.side-menu li{
list-style-type: none;
 margin-right: 40px;
}
.side-menu ul{
padding-left: 0px;
}
a :hover{
    border-bottom: 2px solid rgba(37, 225, 237, 1);
    color: rgba(37, 225, 237, 1);
}
#reply-icon{
   float: right; 
   padding:10px 20px;
}
#reply-icon:hover{
 background-color:rgba(37, 225, 237, 1); 
 color:black
 }
 .send{
    height: 40px;
    width: 100%;
    background-color: black;
    color: white;
    margin-bottom: 70px;
    border: 2px solid rgba(255, 138, 0, 1);
 }
 .send:hover{
background-color: rgba(255, 138, 0, 1);
 }
 .side-menu ul li button{
    text-align: center;
    width: 130%;
    margin-top: 20px;
    font-size: 18px;
    height: 40px;
    background-color: rgba(0, 0, 0, 0.04);
    color: white;
    border: none;
 }
 .side-menu ul li button:hover{
    background-color: rgba(37, 225, 237, 1);
    color:black;
    font-weight: bold;
    padding-top: 9px;
    
 }
 .ham-menu i{
   
    color:rgba(37, 225, 237, 1) ;
    font-weight: bold;
 }
 .ham-menu {
    color: white;
    margin-left:4vw;
    font-size: 30px;
    font-family: 'arial narrow';
    font-weight: bold;
    
 }
#message-btn{
    display: block;
}
/* style for bloglist elements */

.flex-cards{
    display: flex;
    column-gap: 20px;
    padding: 0px 40px;
}
.flex-cards div{
    border: 1px solid white;
    background-color: black;
    margin-top: 40px;
}
.card1 .card2 .card3 .card4 {
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
    max-width: 200px;
    margin: auto;
    text-align: center;
    background-color: black;
    border: 2px solid white;
    display: block;
   
    
  }
  .title {
    color: white;
    font-size: 20px;
    padding-left: 7px;
  }
  
  button {
  
    outline: 0;
    display: inline-block;
    padding: 8px ;
    color: white;
    background-color: rgba(255, 138, 0, 1);
    text-align: center;
    cursor: pointer;
    width: 100%;
    font-size: 18px;
  }
  h1{
   color: white;
   padding: 5px 80px;
   font-weight: bold;
  }
  #btn-login{
    outline: 0;
    display: inline-block;
    padding: 8px ;
    color: black;
    background-color: rgba(37, 225, 237, 1);
    cursor: pointer;
    width: 120px;
    font-size: 18px;
    border:none;
    border-radius: 4px;
    font-weight: bold;
    margin-top: 40px;
    margin-left: 40px;
  }
  p .update{
    background-color: rgba(208, 209, 208, 0.66);
    font-weight: bold;
    color: black;
    text-transform: uppercase;
    font-family: cursive;
  }
  p .delete{
    background-color: rgba(208, 209, 208, 0.66);
    color: black;
    font-weight: bold;
    text-transform: uppercase;
    font-family: cursive;
  }
  p .delete:hover{
    background-color: rgba(37, 225, 237, 1);
    font-weight: bold;
  }
  p .update:hover{
    background-color: rgba(255, 138, 0, 1);
    font-weight: bold;
    color: white;
  }
  .flex-cards{
    background-color: rgba(0, 0, 0, 0.44);
  }
  #mainbody{
    display: none;
  }
  @media  screen and (max-width:921px) {
    .box1,.box2,.box3{
        width: 18vw;
        margin: 20px;
        height: 150px;
        border-radius: 4px;
        box-shadow: 0 8px 10px 0 rgba(0, 0, 0, 0.2);
     }
     .box1,.main-body,.ham-menu{
        margin-left: 8vw;
     }  
}
@media  screen and (max-width:681px) {
  
   
   .container{
    display:grid;
    grid-template-columns: 0% 100%;
   
}
.box1,.box2,.box3{
    width: 30vw;
    margin: 20px;
    height: 150px;
    border-radius: 4px;
    box-shadow: 0 8px 10px 0 rgba(0, 0, 0, 0.2);
 }
}
@media  screen and (max-width:511px) {
    .flex-cards{
        background-color: rgba(0, 0, 0, 0.44);
        flex-direction: column;
      } 
      .boxes{
        display: flex;
         flex-direction: column;
    }
    .box1,.box2,.box3{
        width: 100%;
        margin-right: 20px;
    }

}

